# linear_cross_entropy_loss

./: .flake8  .gitignore  LICENSE  README.md  bench_fusions.py  pyproject.toml
bench-acc/:  bf16 Linear+Loss Accuracy over H. Defaults: N=B*S=16384, H=2048, V=131072.csv   bf16 Linear+Loss Accuracy over N. Defaults: N=B*S=16384, H=2048, V=131072.csv   bf16 Linear+Loss Accuracy over V. Defaults: N=B*S=16384, H=2048, V=131072.csv   bwd bf16 Linear+Loss Accuracy over H. Defaults: N=B*S=16384, H=2048, V=131072.csv   bwd bf16 Linear+Loss Accuracy over N. Defaults: N=B*S=16384, H=2048, V=131072.csv   bwd bf16 Linear+Loss Accuracy over V. Defaults: N=B*S=16384, H=2048, V=131072.csv   bwd fp16 Linear+Loss Accuracy over H. Defaults: N=B*S=16384, H=2048, V=131072.csv   bwd fp16 Linear+Loss Accuracy over N. Defaults: N=B*S=16384, H=2048, V=131072.csv   bwd fp16 Linear+Loss Accuracy over V. Defaults: N=B*S=16384, H=2048, V=131072.csv   fp16 Linear+Loss Accuracy over H. Defaults: N=B*S=16384, H=2048, V=131072.csv   fp16 Linear+Loss Accuracy over N. Defaults: N=B*S=16384, H=2048, V=131072.csv   fp16 Linear+Loss Accuracy over V. Defaults: N=B*S=16384, H=2048, V=131072.csv   fwd bf16 Linear+Loss Accuracy over H. Defaults: N=B*S=16384, H=2048, V=131072.csv   fwd bf16 Linear+Loss Accuracy over N. Defaults: N=B*S=16384, H=2048, V=131072.csv   fwd bf16 Linear+Loss Accuracy over V. Defaults: N=B*S=16384, H=2048, V=131072.csv   fwd fp16 Linear+Loss Accuracy over H. Defaults: N=B*S=16384, H=2048, V=131072.csv   fwd fp16 Linear+Loss Accuracy over N. Defaults: N=B*S=16384, H=2048, V=131072.csv  (+2 more)
(+81 files in other folders)
